refactor: Simplify camera pose estimation logic in getPerCameraEstimatedPoses()